# code-express

./: CMakeLists.txt  Introduction.md  ProjectHome.md
 code-express --username novus003@gmail.com/base/: PluginInterface.h
 code-express --username novus003@gmail.com/config/: txt.xml
src/: code_express.cpp  snippet_table.cpp  snippet_table.hpp
src/config/: xml.xml
trunk/ code-express --username novus003@gmail.com/: CMakeLists.txt  resource.h
trunk/ code-express --username novus003@gmail.com/config/: global.xml
trunk/src/: resource.rc
wiki/: Introduction.wiki  PageName.wiki
